20_applications/paperless/paperless_gotenberg_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-gotenberg
  namespace: paperless
  labels:
    app.kubernetes.io/name: "paperless"
    app.kubernetes.io/instance: "paperless"
    app.kubernetes.io/component: "gotenberg"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "paperless"
      app.kubernetes.io/instance: "paperless"
      app.kubernetes.io/component: "gotenberg"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "paperless"
        app.kubernetes.io/instance: "paperless"
        app.kubernetes.io/component: "gotenberg"
    spec:
      securityContext:
        privileged: false
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      containers:
        - name: gotenberg
          image: registry.lab.reisman.org/proxy.docker.io/gotenberg/gotenberg:8.14.1
          imagePullPolicy: IfNotPresent
          command:
            - "gotenberg"
          args:
            - "--chromium-disable-javascript=true"
            - "--chromium-allow-list=file:///tmp/.*"
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 60
