20_applications/paperless/paperless_gotenberg_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-gotenberg
  namespace: paperless
  labels:
    app.kubernetes.io/name: "paperless"
    app.kubernetes.io/instance: "paperless"
    app.kubernetes.io/component: "gotenberg"
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
  selector:
    app.kubernetes.io/name: "paperless"
    app.kubernetes.io/instance: "paperless"
    app.kubernetes.io/component: "gotenberg"
