20_applications/paperless/paperless_server_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-server
  namespace: paperless
  labels:
    app.kubernetes.io/name: "paperless"
    app.kubernetes.io/instance: "paperless"
    app.kubernetes.io/component: "server"
  annotations:
    cert-manager.io/cluster-issuer: ${vals_infra_certManager_issuer}
    nginx.ingress.kubernetes.io/proxy-body-size: "100m" #TODO set this appropriately
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "paperless.${vals_info_cluster_domain}"
      secretName: paperless-server-tls
  rules:
    - host: "paperless.${vals_info_cluster_domain}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-server
                port:
                  name: http
